# android-project

./: README.md
app/: package.json
capacitor/: package.json
capacitor/android/app/: build.gradle
capacitor/android/app/src/main/: AndroidManifest.xml
capacitor/android/app/src/main/assets/: capacitor.config.json
capacitor/android/app/src/main/java/app/simple/hello/capacitor/: MainActivity.java
capacitor/android/app/src/main/res/values/: strings.xml
capacitor/electron/: capacitor.config.json  package-lock.json  package.json
capacitor/www/: index.html
hello-ionic/: ionic.config.json  package-lock.json  package.json
hello-ionic/android/app/src/main/res/values/: strings.xml
hello-ionic/electron/: capacitor.config.json  package-lock.json  package.json
helloworld/: Cargo.toml
helloworld/src/: main.rs
nativescript/: README.md
nativescript/app/: package.json
nativescript/app/app/: main.js  package.json
snowpack/: README.md  package.json  snowpack.config.mjs
snowpack/src/: index.html
snowpack/src/js/: app.js
