[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndk-sys = { git = "https://github.com/rust-windowing/android-ndk-rs" }
ndk = { git = "https://github.com/rust-windowing/android-ndk-rs" }
ndk-glue = { git = "https://github.com/rust-windowing/android-ndk-rs" }
ndk-build = { git = "https://github.com/rust-windowing/android-ndk-rs" }

[lib]
crate-type = ["lib", "cdylib"]
